# foundry

./: .gitignore  .gitmodules  00 - Decrypt.md  Cargo.toml  context_dump_decrypt.sh  place_vault_docs.sh  setup_decrypt.sh
00 - THEMES/: Integrity.md  Self.md
01 - PROTOCOL/Configs/: warframe.toml
01 - PROTOCOL/Rulesets/: mission.toml  player.toml  session.toml  top.toml
01 - PROTOCOL/Schemas/: commlink.proto
01 - SCHEMAS/: README.md
02 - MODULES/Cephalon Cypher/: Cephalon Cypher.md  neuroptics.md  systems.md
02 - MODULES/Commlink/: Commlink.md
02 - MODULES/Depot/: Depot.md
02 - MODULES/Foundry/: Foundry.md  README.md
02 - MODULES/Ghost/: Ghost.md  README.md
02 - MODULES/NodeSync/: NodeSync.md
02 - MODULES/Persona/: State Casting.md
02 - MODULES/Security/: Security.md
02 - MODULES/Spool/: README.md  Spool.md
03 - WEBSITES/FoxtailCaravan.com/: README.md
03 - WEBSITES/IsAzzyAutistic.com/: README.md
03 - WEBSITES/Requires.Management/: requires.management.md
03 - WEBSITES/Steven-Briggs.com/: README.md
04 - NULLPOINT/: NullPoint.md
04 - NULLPOINT/03 - MODULES/: README.md
05 - REFERENCES/: References.md
05 - REFERENCES/01 - TRAITS/: Traits.md
05 - REFERENCES/03 - TERMS/: Barrier To Entry.md  Core Realization.md  Journey.md  Mechanisms.md
05 - REFERENCES/04 - Disclosures/: LLM and Generative AI Disclosure.md
06 - THEMES/: Awareness.md  Expression.md  Integrity.md  Self.md
src/: main.rs
vault/: Commlink.md  Decrypt.md
vault/modules/: Arbiter.md  Foundry.md  Ghost.md  Persona.md  Spool.md
vault/themes/: Awareness.md  (+1 more)
(+3 files in other folders)
