[package]
name        = "foundry"
version     = "0.1.0"
edition.workspace     = true
authors.workspace     = true
license     = "AGPL-3.0"
repository  = "https://github.com/RocinRykor/foundry"

[lib]
name = "foundry"
path = "src/lib.rs"

[[bin]]
name = "foundry"
path = "src/main.rs"

[dependencies]
cortex     = { workspace = true }
commlink   = { workspace = true }
archives   = { workspace = true }
persona    = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
dioxus     = { workspace = true }
tracing    = { workspace = true }
